<resources>
    <string name="app_name">mbane</string>
    <string name="action_settings">Settings</string>
    <string name="enter_appliance">Enter Appliance</string>
    <string name="hint_item">Enter Appliance</string>
    <string name="quantity_hint">Quantity</string>
    <string name="save_title">SAVE</string>
    <string name="wattage_hint">Appliance Wattage</string>
    <string name="hours_hint">Hours used per day</string>
    <string name="title_activity_list">ListActivity</string>
</resources>
