<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/layout_id"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_appliance"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/applianceItem"
                android:layout_below="@id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hint_item"/>

            <EditText
                android:id="@+id/applianceQty"
                android:hint="@string/quantity_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_below="@+id/applianceItem"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/applianceWattage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/applianceQty"
                android:inputType="numberDecimal"
                android:layout_marginTop="15dp"
                android:hint="@string/wattage_hint"/>

            <EditText
                android:id="@+id/applianceUsageTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/applianceWattage"
                android:layout_marginTop="15dp"
                android:inputType="time"
                android:hint="@string/hours_hint"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/applianceUsageTime"
                android:background="@color/colorPrimary"
                android:text="@string/save_title"
                android:textStyle="bold"
                android:textColor="@android:color/white" />
        </RelativeLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>